--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
     <script src="index.js" defer></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dr John E Pierce, speech pathologist and researcher">
 </head>
 <body>
@@ -185,7 +186,7 @@
             <a href="CV.html">CV</a>
         </div>
     </div>
-<!-- WORD CLOUD --><div id="learnAbout">More about my work:</div>
+<!-- WORD CLOUD --><div id="learnAbout">Some of my work:</div>
     <div class="wordcloud" style="display: none;">
         
     </div>
@@ -224,7 +225,7 @@
         <div class="Project_and_tools aphasia technology">
             <a href="https://rbcavanaugh.github.io/aphasia-tech-map/" target="">
                 <div class="cardUpper" >
-                    <img src="images/techmap.png" alt="" style="width: 100%;"/>
+                    <img src="images/techmap.png" alt="" style="width: 110%;"/>
                 </div>
                 <div class="cardLower">
                     Map of technology projects for aphasia
