--- a/multimodaltherapy.html
+++ b/multimodaltherapy.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="publication.css">
     <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <a id="homeArrow" href="index.html">
