--- a/AI_images.html
+++ b/AI_images.html
@@ -111,6 +111,10 @@
                 margin-top: 2rem!important;
                 /* margin-bottom: auto!important; */
             }
+        #syntaxBox {
+            flex-wrap: wrap;
+        }
+        
         }
     </style>
 </head>
@@ -315,14 +319,14 @@
             padding: 1rem;
             border-radius: 1rem;">
                 <span style="display: block; font-style: italic;">Results of prompt, “A ballerina runs behind a policeman, high speed shutter”. The preposition is not consistently applied to the correct noun.</span>
-                <div style="display: flex; justify-content: center; width: 100%;gap: 1rem;">
-                    <img style="width: 100%;" loading="lazy" src="./images/AIimages/chase1.jpg" >
+                <div id="syntaxBox" style="display: flex; justify-content: center; width: 100%;gap: 1rem;">
+                    <img style="width: 100%; max-width: 40vw;" loading="lazy" src="./images/AIimages/chase1.jpg" >
                     <div class="caption"></div>
-                    <img style="width: 100%;" loading="lazy" src="./images/AIimages/chase2.jpg" >
+                    <img style="width: 100%; max-width: 40vw" loading="lazy" src="./images/AIimages/chase2.jpg" >
                     <div class="caption"></div>
-                    <img style="width: 100%;" loading="lazy" src="./images/AIimages/chase3.jpg" >
+                    <img style="width: 100%; max-width: 40vw" loading="lazy" src="./images/AIimages/chase3.jpg" >
                     <div class="caption"></div>
-                    <img style="width: 100%;" loading="lazy" src="./images/AIimages/chase4.jpg" >
+                    <img style="width: 100%; max-width: 40vw" loading="lazy" src="./images/AIimages/chase4.jpg" >
                     <div class="caption"></div>
                 </div>
             </div>
