Fix overflowing video

--- a/multimodaltherapy.html
+++ b/multimodaltherapy.html
@@ -25,9 +25,9 @@
     </div>
     <p style="text-align: justify;margin-bottom: 3rem;">The term "multimodal therapy" is often used when talking about treatments for aphasia. But there's no clear definition of what "multimodal therapy" means. We suggest a new way to define and group these treatments</p>
     <div class="mid skew1">
-        <div class="mid skew-1">
+        <div class="mid skew-1" style="text-align: center;">
             <h2>Video summary</h2>
-            <iframe src="https://s3-eu-west-1.amazonaws.com/ppreviews-asha-8593092892848920/14206592/video_preview.mp4" width="568" height="351" allowfullscreen frameborder="0" style="display: block;margin: auto;"></iframe>
+            <iframe src="https://s3-eu-west-1.amazonaws.com/ppreviews-asha-8593092892848920/14206592/video_preview.mp4" width="568" height="351" style="max-width: 90vw;" allowfullscreen frameborder="0" style="display: block;margin: auto;"></iframe>
         </div>
     </div>
     <div class="dark" style="text-align: center;">
