--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         <stop offset="80%" style="stop-color:#0681ec;stop-opacity:1.00" />
                   </linearGradient> 
                   <mask id="twitterIcon">
-                    <path filter="url(#noise)" width="16" height="16" fill="white" d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z">
-                    </path>
+                    <path fill="white" d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                   </mask> 
                   <!-- <clipPath id="the-object">
                     <path fill="currentColor" d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z">
@@ -141,11 +140,11 @@
         </a>
         <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila" target="_blank">
             <?xml version="1.0" encoding="UTF-8"?>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" " style="transform: scale(0.76);">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" style="transform: scale(0.76);">
                 <defs>
                     <linearGradient id="emailGradient" x1="0%" y1="0%" x2="0%" y2="100%"  >
-                        <stop offset="10%" style="stop-color:hsl(0, 0%, 70%);stop-opacity:1.00" />
-                        <stop offset="100%" style="stop-color:hsl(0, 0%, 53%);stop-opacity:1.00" />
+                        <stop offset="10%" style="stop-color:hsl(0, 3.1%, 50.2%);" />
+                        <stop offset="100%" style="stop-color:hsl(20, 20.3%, 29%)" />
                   </linearGradient>
                   <mask id="emailIcon">
                     <path d="m15.83,3.34l-1,.91-4.2,3.83,4.2,3.76.97.87h0c.11-.22.17-.47.17-.72v-7.97c0-.23-.05-.46-.14-.68h0Z" style="fill:#fff;"/><path d="m9.79,8.84l-.64.58c-.32.29-.73.45-1.16.45s-.84-.16-1.16-.45l-.63-.58-4.12,3.71-1.08.97c.22.11.47.17.72.17h12.53c.26,0,.51-.06.75-.18l-1.08-.96-4.14-3.71Z" style="fill:#fff;"/><path d="m5.37,8.07L1.17,4.2l-.97-.9c-.11.22-.17.47-.17.72v7.97c0,.26.06.51.18.75l.96-.87,4.2-3.79Z" style="fill:#fff;"/><path d="m7.61,8.58c.1.1.24.15.39.15s.28-.06.39-.15l6.67-6.08h0c-.25-.13-.52-.19-.79-.2H1.74c-.26,0-.52.06-.75.18l1.05.96,5.58,5.14Z" style="fill:#fff;"/>
