--- a/CV.html
+++ b/CV.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Dr John E Pierce, Curriculum Vitae">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 </head>
 <body>
     <script>
@@ -117,8 +118,9 @@
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span>$416k</span> funding | <span>$191k</span> as CIA </span>
             <span><span>15</span> publications </span>
-            <span><span>147</span> citations</span>
+            <span><span>157</span> citations</span>
             <span>H-index <span>8</span></span>
+            <!-- https://www.scopus.com/authid/detail.uri?authorId=57209304655 -->
         </p>
     </div>
     <div id="content">
@@ -365,13 +367,14 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
-               <b>Pierce, J. E.</b> (In Press). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>.
+               <b>Pierce, J. E.</b> (2023). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>. <a href="https://doi.org/10.1044/2023_AJSLP-23-00142">https://doi.org/10.1044/2023_AJSLP-23-00142</a>
             </p>
             <table>
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
                         <span class="altmetricCount"></span>
+                        <!-- <div class='altmetric-embed' data-badge-type='donut' data-doi="10.1038/nature.2012.9872"></div> -->
                     </td>
                 </tr>
             </table>
