--- a/CV.html
+++ b/CV.html
@@ -366,6 +366,9 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+                <p>Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (in press). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
+                https://doi.org/10.1080/02687038.2023.2282659
+                </p>
             <p>
                <b>Pierce, J. E.</b> (2023). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>. <a href="https://doi.org/10.1044/2023_AJSLP-23-00142">https://doi.org/10.1044/2023_AJSLP-23-00142</a>
             </p>
