Added Kim et al

--- a/CV.html
+++ b/CV.html
@@ -366,6 +366,9 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>
+                Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (inp press). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. Stroke. 
+            </p>
                 <p>Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (in press). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
                 https://doi.org/10.1080/02687038.2023.2282659
                 </p>
