--- a/CV.html
+++ b/CV.html
@@ -38,10 +38,6 @@
         let elapsed = ((now - Phd)/31556736000).toFixed(1);
         document.getElementById("yearsPost").innerHTML = elapsed;
 
-        //Scopus details
-        //API key 82f43dfad55c686aeadb39347e41084c
-        //https://api.elsevier.com/metrics/metrics?metrics=ScholarlyOutput%2CCitedPublications&authors=57209304655&includeSelfCitations=true&byYear=true&includedDocs=AllPublicationTypes&journalImpactType=CiteScore&showAsFieldWeighted=false&indexType=hIndex&apiKey=82f43dfad55c686aeadb39347e41084c
-
         //strip word styling
         var wordStyling = ["", "mso-bidi-font-weight:normal","font-size:11.0pt;",'font-family:"Helvetica Neue Light";',"mso-themecolor:text1","mso-themetint:217","color:#262626;",'Helvetica Neue Light','font-family','MsoNormal',"11.0pt","10.0pt", "-18.0pt;","padding:0cm 5.4pt 0cm 5.4pt","width:297.7pt;","height:11.2pt","width:82.2pt;",'width="397','width="110'];
         for (var str of wordStyling) {
@@ -386,40 +382,48 @@
             <p>
                 Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (in press). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. Stroke. 
             </p>
-                <p>Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
+            <p>
+                Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
                 <a href="https://doi.org/10.1080/02687038.2023.2282659">https://doi.org/10.1080/02687038.2023.2282659</a>
-                </p>
+            </p>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/02687038.2023.2282659"></div>
+                        </td>
+                    </tr>
+                </table>
             <p>
                <b>Pierce, J. E.</b> (2023). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>. <a href="https://doi.org/10.1044/2023_AJSLP-23-00142">https://doi.org/10.1044/2023_AJSLP-23-00142</a>
             </p>
-            <table>
-                <tr>
-                    <td>
-                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1044/2023_AJSLP-23-00142"></div>
-                    </td>
-                </tr>
-            </table>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1044/2023_AJSLP-23-00142"></div>
+                        </td>
+                    </tr>
+                </table>
             <p>
                 Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology</i>, 0(0), 1–12. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
             </p>
-            <table>
-                <tr>
-                    <td>
-                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/02687038.2023.2229030"></div>
-                    </td>
-                </tr>
-            </table>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/02687038.2023.2229030"></div>
+                        </td>
+                    </tr>
+                </table>
 
             <p>
                 Adikari, A., Hernandez, N., Alahakoon, D., Rose, M. L., & <b>Pierce, J. E.</b> (2023). From concept to practice: a scoping review of the application of AI to aphasia diagnosis and management. <i>Disability and Rehabilitation</i>, 1-10. <a href="https://doi.org/10.1080/09638288.2023.2199463">https://doi.org/10.1080/09638288.2023.2199463</a>
             </p>
-            <table>
-                <tr>
-                    <td>   
-                        <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/09638288.2023.2199463"></div>
-                    </td>
-                </tr>
-            </table>
+                <table>
+                    <tr>
+                        <td>   
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/09638288.2023.2199463"></div>
+                        </td>
+                    </tr>
+                </table>
 
             <p>
                 <b>Pierce, J. E.</b>, O’Halloran, R., Togher, L., Nickels, L., Copland, D., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A., Carragher, M., Steel, G., & Rose, M. L. (2023). Acceptability, feasibility and preliminary efficacy of low-moderate intensity Constraint Induced Aphasia Therapy and Multi-Modality Aphasia Therapy in chronic aphasia after stroke. <i>Topics in Stroke Rehabilitation</i>. <a href="https://doi.org/10.1080/10749357.2023.2196765">https://doi.org/10.1080/10749357.2023.2196765</a>
@@ -487,8 +491,9 @@
                 chronic post-stroke aphasia: importance of individual response analysis<i>.
                 Disability and Rehabilitation, 1-16</i>. </span><span><a
                 href="https://doi.org/10.1080/09638288.2021.1955303"><span>https://doi.org/10.1080/09638288.2021.1955303</span></a></span><span
-                > </span></p>
-                <p><span><a
+                > </span>
+                <br>
+                <span><a
                 href="https://figshare.com/articles/dataset/A_systematic_review_of_maintenance_following_intensive_therapy_programs_in_chronic_post-stroke_aphasia_importance_of_individual_response_analysis/15157621?file=29121391"><span></a>
                  <img class="inlineicon" src="images/image006.png"/>
                  
@@ -499,7 +504,6 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p>
                     <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1080/09638288.2021.1955303"></div>
                   </td>
                   <td width=159 valign=top >
@@ -575,8 +579,9 @@
                 post-stroke aphasia: A systematic scoping review. <i>Neuropsychological
                 Rehabilitation</i>, 31(10), 1629-1660. </span><span><a
                 href="https://doi.org/10.1080/09602011.2020.1786412"><span>https://doi.org/10.1080/09602011.2020.1786412</span></a></span><span
-                ><span></span></span></p>
-                <p><span><a
+                ><span></span></span>
+                <br>
+                <span><a
                 href="https://www.tandfonline.com/doi/suppl/10.1080/09638288.2020.1843079?scroll=top"><span
                 >
                  </a>
@@ -608,8 +613,9 @@
                 intensity for chronic aphasia: A <i>systematic review and meta-analysis.
                 Neuropsychological</i> Rehabilitation, 31(8), 1289-1313. </span><span><a
                 href="https://doi.org/10.1080/09602011.2020.1768127"><span>https://doi.org/10.1080/09602011.2020.1768127</span></a></span><span
-                >&nbsp;</span></p>
-                <p><span><a
+                >&nbsp;</span>
+                <br>
+                <span><a
                 href="https://figshare.com/articles/dataset/A_systematic_review_of_maintenance_following_intensive_therapy_programs_in_chronic_post-stroke_aphasia_importance_of_individual_response_analysis/15157621?file=29121391"><span
                 >
                  </a>
@@ -739,7 +745,10 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-                <p><b>Pierce, J. E.</b>, Hill, A., Wong, D., Pitt, R., Rose, M. (October, 2023). Development and testing of M-MAT Tele – a telehealth adaptation of a group-based intervention for aphasia. Logopädie Digital <b>[invited speaker]</b>, Germany.</p>
+                <p><b>Pierce, J. E.</b>, Hill, A., Wong, D., Pitt, R., Rose, M. (November, 2023). <i>Co-design and testing of Multi-Modality Aphasia Therapy Tele, a telehealth adaptation of an evidence-based, group aphasia intervention.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
+                <p><b>Pierce, J. E.</b> (November, 2023). <i>Exploring AI-generated images for aphasia therapy and assessments.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
+                <p><b>Pierce, J. E.</b>, Lazzarotto, M. T., Vuong, G., & Kambanaros, M. (November, 2023). <i>Development of free online aphasia therapy for Mandarin, Vietnamese, and Greek speakers.</i> Aphasiology Symposium of Australasia, Perth, Australia.</p>
+                <p><b>Pierce, J. E.</b>, Hill, A., Wong, D., Pitt, R., Rose, M. (October, 2023). <i>Development and testing of M-MAT Tele – a telehealth adaptation of a group-based intervention for aphasia. Logopädie Digital</i> <b>[invited speaker]</b>, Germany.</p>
                 <p><b>Pierce, J. E.</b>, Hernandez, N., Alahakoon, D., Adikari, A., Pallewela, N., Sheldrick, T., Hill, A., Ryan, B., Wong, D., Copland, D., Power, E., Kneebone, I., Togher, L., Usherwood, T., Shiggins, C., Cadilhac, D., Hill, K., Churilov, L., Worrall, L., Lanyon, L., Attard, M., Rietdijk, R., Lindley, R. I., Rose, M. L. (August, 2023). <i>Highest Priority Challenges for People with Communication Disability after Discharge.</i> British Aphasiology Society Conference, 2023, London, UK.</p>
                 <p><b>Pierce, J. E.</b>, Hernandez, N., Alahakoon, D., Adikari, A., Pallewela, N., Sheldrick, T., Hill, A., Ryan, B., Wong, D., Copland, D., Power, E., Kneebone, I., Togher, L., Usherwood, T., Shiggins, C., Cadilhac, D., Hill, K., Churilov, L., Worrall, L., Lanyon, L., Attard, M., Rietdijk, R., Lindley, R. I., Rose, M. L. (August, 2023). <i>What are the Highest Priority Challenges for People with Communication Disability after Discharge?</i> Stroke 2023, Melbourne, Australia.</p>
                 <p><b>Pierce, J. E.</b> (August, 2023). <i>Co-designing digital solutions for aphasia. </i>Loddon Mallee Region Speech Pathology Week Event <b>[invited speaker]</b>, Bendigo, Australia.</p>
@@ -1195,6 +1204,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+                <p>Marking of honours thesis for Sydney University (by invitation)</p>
                 <p><span>Marking of final year thesis for National University of Singapore (by invitation)</span></p>
                 <p ><span>Aphasia intervention (2022-2023).
                 Class delivered to PhD neuropsychology students by invitation, Monash
@@ -1263,8 +1273,8 @@
                   </td>
                   <td valign=top>
                   <p><a
-                  href="http://www.twitter.com/JohnPierce85">Twitter handle</a></p>
-                  <p>2,029 followers</p>
+                  href="http://www.twitter.com/JohnPierce85">Twitter</a></p>
+                  <p>2,063 followers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1367,12 +1377,13 @@
             <ul>
                 <li>Aphasiology</li>
                 <li>Archives of Physical Medicine and Rehabilitation</li>
-                <li>Folia Phoniatrica et Logopedica (by invitation)</li>
+                <li>Asia-Pacific Journal of Oncology Nursing</li>
+                <li>Folia Phoniatrica et Logopedica</li>
                 <li>International Journal of Speech-Language Pathology</li>
-                <li>International Journal of Language and Communication Disorders (by invitation) (2)</li>
+                <li>International Journal of Language and Communication Disorders (3)</li>
                 <li>Journal of Digital Health</li>
                 <li>American Journal of Speech-Language Pathology (2)</li>
-                <li>Journal of Communication Disorders (by invitation)</li>
+                <li>Journal of Communication Disorders</li>
                 <li>Journal of Neurology, Neurosurgery and Psychiatry</li>
             </ul>
             <p><span>Presented at Parkinson’s Disease fundraising
