--- a/AI_images.html
+++ b/AI_images.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGCS7827C1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MGCS7827C1');
+</script>
+
     <title>AI-generated images for aphasia therapy and assessments</title>
     <link rel="stylesheet" href="publication.css">
     <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
