--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGCS7827C1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MGCS7827C1');
+</script>
+
     <title>John E Pierce; Speech Pathologist, Researcher</title>
     <link rel="stylesheet" href="index.css">
     <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
