Add red to PDF icon

--- a/AI_images.html
+++ b/AI_images.html
@@ -144,7 +144,7 @@
                 <img class="pdfsvg" src="images/pdf_dark.svg">Author PDF
             </a>
             <a href="http://dx.doi.org/10.1044/2023_AJSLP-23-00142" div class="paperbutton_light paperbutton">
-                <img class="pdfsvg" src="images/pdf_dark.svg" style="width: 1px;height: calc(1rem*4/3);">
+                <img class="pdfsvg" src="images/pdf_dark.svg" style="width: 1px;height: calc(1rem*4/3);opacity: 0;">
                 doi.org/10.1044/2023_AJSLP-23-00142
             </a>
         </div>
