--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div id="nameLabel">John E. Pierce</div>
 <!-- Bio paragraph -->
     <div class="bioParagraph">
-        <p>I'm Dr John Pierce</b>, a speech pathologist and post-doctoral researcher. I conduct research, work on tools for speech pathologists, and explore technology to assist people with aphasia.</p>
+        <p>I'm Dr John Pierce</b>, a speech pathologist and post-doctoral researcher at La Trobe University. I conduct research, work on tools for speech pathologists, and explore technology to assist people with aphasia.</p>
     </div>
 <!-- TOP LINKS -->
     <div class="toplinkContainer" style="display: none;">
@@ -262,7 +262,7 @@
                 <div class="cardLower">
                     COMPARE trial results
                     <span style="font-size: 1rem;font-weight: 400;">
-                        <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> vs <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> vs usual care
+                        <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> vs <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> vs usual care.
                         <br>RCT of <span style="font-weight: 800;color:rebeccapurple">216</span> people.
                     </span>
                 </div>
