Fix width of img

--- a/videopreferences.html
+++ b/videopreferences.html
@@ -34,7 +34,7 @@
     </strong></p>
     <div class="dark" style="text-align: center;">
         <h2>This research identified <strong>11</strong> preferences for aphasia-accessible research videos:</h2>
-        <img src="images/videoabstractinfographic.jpg" alt="" >
+        <img src="images/videoabstractinfographic.jpg" alt="" style="width:100%" >
     </div>
     <div class="mid">
         <p>These preferences provide guidance to researchers in producing videos on aphasia research, thereby bridging the gap between evidence and knowledge within the aphasia community. We also recognize the need for further research, including the views of non-English speaking participants and family members of people with aphasia.</p>
