Add direct PDF link

--- a/videopreferences.html
+++ b/videopreferences.html
@@ -26,7 +26,7 @@
     <h1>Preferences of people with post-stroke aphasia for aphasia research videos: An international project</h1>
     <h3>Emma Finch, John E. Pierce, Analisa M. Pais, Carol Dow-Richards, Allie Reed, Marina Charalambous, Maria Assunção Matos, Sarah J. Wallace, and Caterina Breitenstein</h3>
     <div style="text-align: center;">
-        <a href="https://doi.org/10.1080/02687038.2023.2229030" div class="paperbutton">
+        <a href="https://www.tandfonline.com/doi/epdf/10.1080/02687038.2023.2229030?needAccess=true" div class="paperbutton">
             <img class="pdfsvg" src="images/pdf_light.svg">doi.org/10.1080/02687038.2023.2229030
         </a>
     </div>
