Add video preferences link

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </a>
         </div>
         <div class="Publications aphasia aphasia aphasia-friendly_videos video_abstracts">
-            <a href="https://www.tandfonline.com/doi/epdf/10.1080/02687038.2023.2229030" target="">
+            <a href="videopreferences.html" target="">
                 <div class="cardUpper" style="background-color: #e6e6e6;">
                     <img src="images/videoabstractinfographic.jpg" alt="" style="width: 100%;margin-top: -20rem;rotate: 45deg;"/>
                 </div>
