Update CV Feb 2024

--- a/CV.html
+++ b/CV.html
@@ -391,7 +391,7 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
-                Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (in press). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. Stroke. 
+                Kim, J., Rose, M. L., <b>Pierce, J. E.</b>, Nickels, L., Copland, D., Togher, L., Godecke, E., Meinzer, M., Rai, T., Hurley, M., Foster, A., Carragher, M., Wilcox, C., & Cadilhac, D. A. (2024). High-intensity aphasia therapy is cost-effective in people with post-stroke aphasia: Evidence from the COMPARE trial. Stroke. <a href="https://doi.org/10.1161/STROKEAHA.123.045183 ">https://10.1161/STROKEAHA.123.045183</a>
             </p>
             <p>
                 Eley, E., Rose, M. L.,  van den Berg, M., <b>Pierce, J.</b>, Foster, A., Lamborn, E., D'Souza, S., Godecke, E., Lanyon, L., Shiggins, C., Kneebone, I., Baker, C. (2023). The effects of cognitive-linguistic interventions to treat aphasia in the first 90 days post stroke: A systematic review. Aphasiology.
@@ -405,7 +405,7 @@
                     </tr>
                 </table>
             <p>
-               <b>Pierce, J. E.</b> (2023). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>. <a href="https://doi.org/10.1044/2023_AJSLP-23-00142">https://doi.org/10.1044/2023_AJSLP-23-00142</a>
+               <b>Pierce, J. E.</b> (2024). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology, 33</i>(1), 443-451.<a href="https://doi.org/10.1044/2023_AJSLP-23-00142">https://doi.org/10.1044/2023_AJSLP-23-00142</a>
             </p>
                 <table>
                     <tr>
@@ -437,7 +437,7 @@
                 </table>
 
             <p>
-                <b>Pierce, J. E.</b>, O’Halloran, R., Togher, L., Nickels, L., Copland, D., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A., Carragher, M., Steel, G., & Rose, M. L. (2023). Acceptability, feasibility and preliminary efficacy of low-moderate intensity Constraint Induced Aphasia Therapy and Multi-Modality Aphasia Therapy in chronic aphasia after stroke. <i>Topics in Stroke Rehabilitation</i>. <a href="https://doi.org/10.1080/10749357.2023.2196765">https://doi.org/10.1080/10749357.2023.2196765</a>
+                <b>Pierce, J. E.</b>, O’Halloran, R., Togher, L., Nickels, L., Copland, D., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A., Carragher, M., Steel, G., & Rose, M. L. (2024). Acceptability, feasibility and preliminary efficacy of low-moderate intensity Constraint Induced Aphasia Therapy and Multi-Modality Aphasia Therapy in chronic aphasia after stroke. <i>Topics in Stroke Rehabilitation, 31</i>(1), 44-56. <a href="https://doi.org/10.1080/10749357.2023.2196765">https://doi.org/10.1080/10749357.2023.2196765</a>
             </p>
             <table>
                 <tr>
@@ -452,7 +452,7 @@
                 L., Copland, D., Dickey, M. W., Dignam, J., <span>Lannin</span>,
                 N. A., Nickels, L., Bernhardt, J., &amp; Hayward, K. S. (2022). Examining
                 dose frameworks to improve aphasia rehabilitation research. <i>Archives of
-                Physical Medicine and Rehabilitation</i>, S0003999322017725. </span></span><span></span><a
+                Physical Medicine and Rehabilitation, 104</i>(5), 830-838. </span></span><span></span><a
                 href="https://doi.org/10.1016/j.apmr.2022.12.002"><span><span >https://doi.org/10.1016/j.apmr.2022.12.002</span></span></a><span><span></span></span></p>
                 <table>
                     <tbody>
@@ -500,7 +500,7 @@
                 J. E</b>., Hill, A. J., O'Halloran, R., &amp; Rose, M. L. (2021). A
                 systematic review of maintenance following intensive therapy programs in
                 chronic post-stroke aphasia: importance of individual response analysis<i>.
-                Disability and Rehabilitation, 1-16</i>. </span><span><a
+                Disability and Rehabilitation, 44</i>(20), 5811-5826. </span><span><a
                 href="https://doi.org/10.1080/09638288.2021.1955303"><span>https://doi.org/10.1080/09638288.2021.1955303</span></a></span><span
                 > </span>
                 <br>
@@ -532,7 +532,7 @@
                 V., Off, C., Babbitt, E., Griffin-<span>Musick</span>, J., &amp;
                 Cherney, L. (2021). Developments in the application of Intensive
                 Comprehensive Aphasia Programs: An international survey of practice. <i>Disability
-                and Rehabilitation</i>. </span><span><a
+                and Rehabilitation, 44</i>(20), 5863-5877. </span><span><a
                 href="https://doi.org/10.1080/09638288.2021.1948621"><span>https://doi.org/10.1080/09638288.2021.1948621</span></a></span><span
                 > </span></p>
                 <table >
@@ -1190,7 +1190,9 @@
             <ul>
                 <li>International Stroke Recovery and Rehabilitation Alliance - Emerging Leaders Group</li>
                 <li>Collaboration of Aphasia
-                Trialists - Workgroup 4</li>
+                    Trialists - Trials for Aphasia Panel</li>
+                <li>Collaboration of Aphasia
+                Trialists - Effectiveness of Aphasia Interventions</li>
                 <li>Collaboration of Aphasia
                 Trialists - Multilingual Aphasia Practice Group</li>
                 <li>Centre for Research
@@ -1206,7 +1208,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p>Currently co-supervising two full time PhD candidates, two honours students, one novice clinician researcher</p>
+            <p>Currently co-supervising two full time PhD candidates, one honours student, one novice clinician researcher</p>
         </div>
         <div class="leftCol">
             <div id="teaching">Teaching</div>
@@ -1268,7 +1270,7 @@
                 Good Practice accreditation.</span></p>
         </div> -->
         <div class="leftCol">
-            <div id="researchimpactheader">Research Impact</div>
+            <div id="researchimpactheader">Researcher Profile</div>
         </div>
         <div class="rightCol" id="researchImpact">
             <div class="rightColMask-container">
@@ -1285,7 +1287,7 @@
                   <td valign=top>
                   <p><a
                   href="http://www.twitter.com/JohnPierce85">Twitter</a></p>
-                  <p>2,063 followers</p>
+                  <p>2,099 followers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1297,7 +1299,7 @@
                   <td valign=top>
                   <p><a
                   href="https://www.youtube.com/channel/UCtigAXfJSqqiDUhNlohcVcA/featured">YouTube Channel</a> (tutorials)</p>
-                  <p>2,700 subscribers</p>
+                  <p>3,100 subscribers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1311,7 +1313,7 @@
                   <p><span><a
                   href="https://www.researchgate.net/profile/John-Pierce/"><span>ResearchGate</span></a></span><span
                   ><span></span></span></p>
-                  <p><span>89,000 paper reads</span><span
+                  <p><span>93,000 paper reads</span><span
                  ></span></p>
                   </td>
                  </tr>
@@ -1389,6 +1391,7 @@
                 <li>Aphasiology</li>
                 <li>Archives of Physical Medicine and Rehabilitation</li>
                 <li>Asia-Pacific Journal of Oncology Nursing</li>
+                <li>Disability & Rehab</li>
                 <li>Folia Phoniatrica et Logopedica</li>
                 <li>International Journal of Speech-Language Pathology</li>
                 <li>International Journal of Language and Communication Disorders (3)</li>
@@ -1396,6 +1399,7 @@
                 <li>American Journal of Speech-Language Pathology (2)</li>
                 <li>Journal of Communication Disorders</li>
                 <li>Journal of Neurology, Neurosurgery and Psychiatry</li>
+                <li>Seminars in Speech & Language</li>
             </ul>
             <p><span>Presented at Parkinson’s Disease fundraising
             event, Caulfield. 2018.</span></p>
