--- a/CV.html
+++ b/CV.html
@@ -198,7 +198,7 @@
                 
                 <p><b>Bachelor of Speech Pathology</b>
                 <br>La Trobe University
-                2008 || Member of Golden Key Society</p>
+                2008</p>
         </div>
         <a id="topArrow" href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
@@ -1137,6 +1137,7 @@
             Member of:
             <ul>
                 <li>International Stroke Recovery and Rehabilitation Alliance - Emerging Leaders Group</li>
+                <li>Affiliate - Centre of Research Excellence to Accelerate Stroke Trial Innovation and Translation</li>
                 <li>Collaboration of Aphasia
                     Trialists - Trials for Aphasia Panel</li>
                 <li>Collaboration of Aphasia
