--- a/CV.html
+++ b/CV.html
@@ -1144,6 +1144,7 @@
                 Trialists - Effectiveness of Aphasia Interventions</li>
                 <li>Collaboration of Aphasia
                 Trialists - Multilingual Aphasia Practice Group</li>
+                <li>Stroke Foundation Guidelines working group</li>
                 <li>Centre for Research
                 Excellence in Aphasia Recovery and Rehabilitation</li>
             </ul>
