--- a/CV.html
+++ b/CV.html
@@ -682,6 +682,8 @@
                   </td>
                  </tr>
                 </table>
+
+                <p>Rose, M. L., Ali, M., Elders, A., Godwin, J., Sandri, A. K., Williams, L. J., Williams, L. R., VandenBerg, K., Abel, S., Abo, M., Becker, F., Bowen, A., Brandenburg, C., Breitenstein, C., Copland, D., Cranfill, T., Pietro-Bachmann, M. D., Enderby, P., Fillingham, J., Pierce, J. E., … Brady, M. C. (2018). Tidier descriptions of speech and language therapy interventions for people with aphasia; consensus from the RELEASE collaboration. <i>Aphasiology, 32</i>(S1), 183–186.</p>
                 
                 <p><b>Pierce, J. E.</b>, Menahemi-Falkov, M., O'Halloran,
                 R., Togher, L., &amp; Rose, M. L. (2017). Constraint and multimodal approaches to therapy for chronic
