--- a/CV.html
+++ b/CV.html
@@ -164,7 +164,7 @@
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span id="funding">$416k</span> funding | <span id="fundingCIA">$191k</span> as CIA </span>
             <span><span  id="pubsCount">15</span> publications </span>
-            <span><span>157</span> citations</span>
+            <span><span>196</span> citations</span>
             <span>H-index <span>9</span></span>
             <!-- https://www.scopus.com/authid/detail.uri?authorId=57209304655 -->
         </p>
@@ -1158,7 +1158,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p>Currently co-supervising two full-time PhD candidates, one honours student, one novice clinician researcher</p>
+            <p>Currently co-supervising four full-time PhD candidates, one honours student</p>
         </div>
         <div class="leftCol">
             <div id="teaching">Teaching</div>
