--- a/CV.html
+++ b/CV.html
@@ -46,7 +46,7 @@
         //Years post PhD
         let now = Date.now();
         const Phd = 1628204400000;
-        let elapsed = ((now - Phd)/31556736000).toFixed(0);
+        let elapsed = Math.floor((now - Phd)/31556736000).toFixed(0);
         document.getElementById("yearsPost").innerHTML = elapsed;
 
         //Funding
@@ -205,6 +205,7 @@
                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
               </svg>
             </a>
+            <div class="clear"></div>
         <div class="leftCol">
             <div id="ProfessionalExperience">Professional Experience</div>
         </div>
@@ -264,6 +265,7 @@
                 <br>Nov 2008 ⇾ Jan 2009 || Fixed term full-time
                 <br><i>Sub-acute inpatient</i></p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="Awards">Awards</div>
         </div>
@@ -319,6 +321,7 @@
                 <p>Pierce, J. E., Crouch,
                 H. (Monash Health), Vogel, A. (The University of Melbourne).</p>
         </div> -->
+            <div class="clear"></div>
         <div class="leftCol">
             <div id="GrantsScholarships">Grants & Scholarships</div>
         </div>
@@ -393,6 +396,7 @@
                 scholarship 2017 - travel scholarship.<br>
                 Melbourne, VIC. ($500 - <b>successful</b>)</p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="JournalArticles">Peer Reviewed Publications</div>
         </div>
@@ -721,6 +725,7 @@
                  </tr>
                 </table>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="BookChapters">Book Chapters</div>
         </div>
@@ -738,6 +743,7 @@
                 <i>Evidence-Based Practice across the Health Professions.</i> Elsevier. 4th Edition. Elsevier. 9780729598545
                 9</p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="Presentations">Presentations</div> 
         </div>
@@ -950,6 +956,7 @@
                 retrievable.</i> St Vincent’s Speech
                 Pathology Subacute Seminar, Melbourne, Australia.</p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="Posters">Conference Posters</div>
         </div>
@@ -958,9 +965,9 @@
                 <div class="rightColMask"></div>
             </div>
             <table style="width: 100%;" id="posterTable">
-            <tr>
+                <tr>
                 <td  valign=top>
-            <p><b>Pierce,
+                <p><b>Pierce,
                 J. E.</b>,
                 Harvey, S., Dickey, M., Cadilhac, D., Carragher, M., Copland, D., Foster, A.,
                 Godecke, E., Kim, J., Hurley, M., Nickels, L., Meinzer, M., Rai, T., Togher,
@@ -1127,6 +1134,7 @@
                </tr>
             </table>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="Memberships">Memberships</div>
         </div>
@@ -1147,6 +1155,7 @@
                 Excellence in Aphasia Recovery and Rehabilitation</li>
             </ul>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="StudentSupervision">Student Supervision</div>
         </div>
@@ -1156,6 +1165,7 @@
             </div>
             <p>Currently co-supervising two full-time PhD candidates, one honours student, one novice clinician researcher</p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="teaching">Teaching</div>
         </div>
@@ -1215,6 +1225,7 @@
                 <p>Clinical
                 Good Practice accreditation.</p>
         </div> -->
+            <div class="clear"></div>
         <div class="leftCol">
             <div id="researchimpactheader">Researcher Profile</div>
         </div>
@@ -1265,6 +1276,7 @@
                  </tr>
                 </table>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="service">Service</div>
         </div>
@@ -1348,6 +1360,7 @@
             <p>Presented at Collaboration of Aphasia
             Trialists workshop on creating video abstracts. 2021.</p>
         </div>
+        <div class="clear"></div>
         <div class="leftCol">
             <div id="collaboration">Collaboration (Published papers)</div>
         </div>
@@ -1358,6 +1371,5 @@
             <img id="world" src="images/world.svg" />
             <img id="national" src="images/national.svg" />
         </div>
-    </div>
     </div>
 </body>
